--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -2,6 +2,7 @@ font pango:monospaced 9
 set $mod Mod4
 floating_modifier $mod
 
+exec_always --no-startup-id ~/.config/polybar/launch.sh --forest
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
@@ -10,9 +11,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show
-#bindsym $mod+p exec --no-startup-id "ulauncher-toggle && xdotool sleep 0.1 type 'c '"
-bindsym $mod+p exec --no-startup-id rofi -show clip
+bindsym $mod+d exec --no-startup-id ~/.config/polybar/forest/scripts/launcher.sh
 
 # start joplin (note taking app)
 bindsym $mod+j exec --no-startup-id "MESA_GL_VERSION_OVERRIDE=3.1COMPAT jetbrains-toolbox"
@@ -81,17 +80,17 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 # reload the configuration file
 bindsym $mod+Shift+r restart
 
-bar {
-  font pango:MesloLGM Nerd Font Bold 12
-  position top
-  tray_output primary
-  status_command i3status-rs config.toml
-  i3bar_command  i3bar -t
-  colors {                                                                                                                              
-          background #00000000
-          statusline #FFFFFF
-  }
-}
+#bar {
+#  font pango:MesloLGM Nerd Font Bold 12
+#  position top
+#  tray_output primary
+#  status_command i3status-rs config.toml
+#  i3bar_command  i3bar -t
+#  colors {                                                                                                                              
+#          background #00000000
+#          statusline #FFFFFF
+#  }
+# }
 
 
 default_border pixel 0
@@ -101,5 +100,3 @@ gaps outer 0px
 gaps inner 2px
 
 for_window [class="Usbimager"] floating enable
-for_window [class="JetBrains Toolbox"] floating enable
-for_window [class="flameshot"] floating enable
