--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,9 @@ font pango:monospaced 9
 set $mod Mod4
 floating_modifier $mod
 
-exec_always --no-startup-id ~/.config/polybar/launch.sh --forest
+title_align center
+
+#exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
@@ -11,7 +13,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id ~/.config/polybar/forest/scripts/launcher.sh
+bindsym $mod+d exec --no-startup-id rofi -show drun
 
 # start joplin (note taking app)
 bindsym $mod+j exec --no-startup-id "MESA_GL_VERSION_OVERRIDE=3.1COMPAT jetbrains-toolbox"
@@ -80,23 +82,33 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 # reload the configuration file
 bindsym $mod+Shift+r restart
 
-#bar {
-#  font pango:MesloLGM Nerd Font Bold 12
-#  position top
-#  tray_output primary
-#  status_command i3status-rs config.toml
-#  i3bar_command  i3bar -t
-#  colors {                                                                                                                              
-#          background #00000000
-#          statusline #FFFFFF
-#  }
-# }
-
-
-default_border pixel 0
-default_floating_border pixel 0
+bar {
+      font pango:MesloLGM Nerd Font Bold 12
+      position top
+      status_command i3status-rs ~/.config/i3status-rust/config.toml
+      i3bar_command  i3bar
+      tray_output primary
+      colors {
+        separator  #31748f
+        background #191724
+        statusline #81a1c1
+        #                  border  background text
+        focused_workspace  #1f1d2e #1f1d2e    #ebdcdc
+        active_workspace   #1f1d2e #31748f    #6e6a86
+        inactive_workspace #1f1d2e #1f222d    #6e6a86
+        urgent_workspace   #1f1d2e #1f222d    #6e6a86
+        binding_mode       #1f1d2e #81a1c1    #6e6a86
+    }
+}
 
 gaps outer 0px
 gaps inner 2px
 
 for_window [class="Usbimager"] floating enable
+
+#                       Border  Background  Text    
+client.focused          #1f1d2e #1f1d2e     #ffffff 
+client.unfocused        #26233a #26233a     #888888 
+client.focused_inactive #26233a #26233a     #888888 
+client.placeholder      #26233a #26233a     #888888 
+client.urgent           #eb6f92 #eb6f92     #ffffff 
