--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,14 +1,14 @@
 format = """
-[](#1354c2)\
+[](#31748f)\
 $os\
 $username\
-[](bg:#2870eb fg:#1354c2)\
+[](bg:#9ccfd8 fg:#31748f)\
 $directory\
-[](fg:#2870eb bg:#3abf30)\
+[](fg:#9ccfd8 bg:#f6c177)\
 $git_branch\
 $git_status\
 $git_state\
-[](fg:#3abf30 bg:#86BBD8)\
+[](fg:#f6c177 bg:#808caa)\
 $c\
 $elixir\
 $elm\
@@ -16,12 +16,14 @@ $golang\
 $haskell\
 $java\
 $julia\
+$lua\
 $nodejs\
 $nim\
 $rust\
 $scala\
+$python\
 $dotnet\
-[](fg:#86BBD8)\
+[](fg:#808caa)\
 $docker_context\
 $fill\
 $time\
@@ -44,13 +46,13 @@ error_symbol = '[❯](bold fg:#DA627D)'
 # and use the os module below
 [username]
 show_always = true
-style_user = "bg:#1354c2 fg:#1d1f21"
-style_root = "bg:#1354c2"
+style_user = "bg:#31748f fg:#1d1f21"
+style_root = "bg:#eb6f92"
 format = '[$user ]($style)'
 disabled = false
 
 [directory]
-style = "bg:#2870eb fg:#1d1f21"
+style = "bg:#9ccfd8 fg:#1d1f21"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
@@ -70,66 +72,67 @@ truncation_symbol = "…/"
 
 [c]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [docker_context]
 symbol = " "
-style = "bg:#06969A fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol $context ]($style) $path'
 
 [elixir]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [elm]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
-[git_branch]
-symbol = ""
-style = "bg:#3abf30 fg:#1d1f21"
-format = '[ $symbol $branch ]($style)'
-
-[git_status]
-style = "bg:#3abf30 fg:#1d1f21"
-format = '[$all_status$ahead_behind ]($style)'
+[python]
+symbol = " "
+style = "bg:#808caa fg:#1d1f21"
+format = '[ $symbol ($version) ]($style)'
 
 [golang]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [haskell]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [java]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [julia]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [nodejs]
 symbol = ""
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [nim]
 symbol = " "
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [rust]
 symbol = ""
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
+format = '[ $symbol ($version) ]($style)'
+
+[lua]
+symbol = " "
+style = "bg:#808caa fg:#1d1f21"
 format = '[ $symbol ($version) ]($style)'
 
 [scala]
@@ -137,14 +140,23 @@ symbol = " "
 format = '[ $symbol ($version) ]($style)'
 
 [dotnet]
-style = "bg:#86BBD8 fg:#1d1f21"
+style = "bg:#808caa fg:#1d1f21"
 symbol= " "
 format = '[$symbol ($version) 󰓾 ($tfm)]($style)'
 heuristic = true
 
 [git_state]
-style = "bg:#57ed4c fg:#3abf30"
+style = "bg:#f6c177 fg:#3abf30"
 format = '[\($state( $progress_current of $progress_total)\)]($style)'
+
+[git_branch]
+symbol = ""
+style = "bg:#f6c177 fg:#1d1f21"
+format = '[ $symbol $branch ]($style)'
+
+[git_status]
+style = "bg:#f6c177 fg:#1d1f21"
+format = '[$all_status$ahead_behind ]($style)'
 
 [time]
 disabled = false
