--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,7 +7,7 @@ title_align center
 #exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty 
 
 # kill focused window
 bindsym $mod+Shift+q kill
