--- a/.config/i3/config
+++ b/.config/i3/config
@@ -105,7 +105,7 @@ bar {
       colors {
         separator  #31748f
         background #191724
-        statusline #81a1c1
+        statusline #ebdcdc
         #                  border  background text
         focused_workspace  #1f1d2e #1f1d2e    #ebdcdc
         active_workspace   #1f1d2e #31748f    #6e6a86
