--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,42 +1,7 @@
-[colors.bright]
-black = "#6e6a86"
-blue = "#9ccfd8"
-cyan = "#ebbcba"
-green = "#31748f"
-magenta = "#c4a7e7"
-red = "#eb6f92"
-white = "#e0def4"
-yellow = "#f6c177"
-
-[colors.cursor]
-cursor = "#524f67"
-text = "#e0def4"
-
-[colors.dim]
-black = "#6e6a86"
-blue = "#9ccfd8"
-cyan = "#ebbcba"
-green = "#31748f"
-magenta = "#c4a7e7"
-red = "#eb6f92"
-white = "#e0def4"
-yellow = "#f6c177"
-
-[colors.footer_bar]
-background = "#1f1d2e"
+[colors.primary]
+# background = "#191724"
+background = "#000000"
 foreground = "#e0def4"
-
-[colors.hints.end]
-background = "#1f1d2e"
-foreground = "#6e6a86"
-
-[colors.hints.start]
-background = "#1f1d2e"
-foreground = "#908caa"
-
-[colors.line_indicator]
-background = "None"
-foreground = "None"
 
 [colors.normal]
 black = "#26233a"
@@ -48,27 +13,15 @@ red = "#eb6f92"
 white = "#e0def4"
 yellow = "#f6c177"
 
-[colors.primary]
-background = "#191724"
-bright_foreground = "#e0def4"
-dim_foreground = "#908caa"
-foreground = "#e0def4"
-
-[colors.search.focused_match]
-background = "#ebbcba"
-foreground = "#191724"
-
-[colors.search.matches]
-background = "#26233a"
-foreground = "#908caa"
-
-[colors.selection]
-background = "#403d52"
-text = "#e0def4"
-
-[colors.vi_mode_cursor]
-cursor = "#524f67"
-text = "#e0def4"
+[colors.bright]
+black = "#6e6a86"
+blue = "#9ccfd8"
+cyan = "#ebbcba"
+green = "#31748f"
+magenta = "#c4a7e7"
+red = "#eb6f92"
+white = "#e0def4"
+yellow = "#f6c177"
 
 [font]
 size = 14.0
@@ -90,13 +43,12 @@ family = "Hack Nerd Font"
 style = "Regular"
 
 [window]
-opacity = 0.93
-title = "Alacritty"
+opacity = 0.80
 
 [window.dimensions]
 columns = 80
 lines = 24
 
-[window.padding]
-x = 5
-y = 5
+# [window.padding]
+# x = 5
+# y = 5
